--- a/Personal_Finance_Management_System/pom.xml
+++ b/Personal_Finance_Management_System/pom.xml
@@ -17,5 +17,10 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.36.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
     </dependencies>
 </project>
