--- a/Personal_Finance_Management_System/pom.xml
+++ b/Personal_Finance_Management_System/pom.xml
@@ -22,5 +22,10 @@
             <artifactId>javax.mail</artifactId>
             <version>1.6.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE170</version>
+        </dependency>
     </dependencies>
 </project>
