--- a/Personal_Finance_Management_System/pom.xml
+++ b/Personal_Finance_Management_System/pom.xml
@@ -28,14 +28,14 @@
             <version>RELEASE170</version>
         </dependency>
         <dependency>
-            <groupId>unknown.binary</groupId>
-            <artifactId>jcalendar-1.4</artifactId>
-            <version>SNAPSHOT</version>
+            <groupId>com.toedter</groupId>
+            <artifactId>jcalendar</artifactId>
+            <version>1.4</version>
         </dependency>
         <dependency>
-          <groupId>com.formdev</groupId>
-          <artifactId>flatlaf</artifactId>
-          <version>3.1.1</version>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf</artifactId>
+            <version>3.1.1</version>
         </dependency>
     </dependencies>
 </project>
